--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
 	android:name="DomaciKucharka"
 	android:windowSoftInputMode="adjustResize"
 	android:theme="@style/DomaciKucharka"
-	android:exported="false"
+	android:exported="true"
 >
 
 <intent-filter android:label="@string/app_name">
