--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,8 @@ android {
 }
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
+		namespace "cz.kle.domacikucharka"
     defaultConfig {
         applicationId "cz.kle.domacikucharka"
         minSdkVersion 21
@@ -43,7 +44,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
 }
 
 task generate(type: Exec, dependsOn: ['composer', 'generateIcons']) {
