--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
     namespace "cz.kle.domacikucharka"
     defaultConfig {
         applicationId "cz.kle.domacikucharka"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 35
         versionCode gitVersionCode
         versionName "${gitVersionName}"
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'org.apache.cordova:framework:13.0.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
 }
 
